<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gymapp2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_orari"
            app:destination="@id/navigation_orari"/>
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_allenamenti"
        android:name="com.example.gymapp2.ui.allenamenti.AllenamentiFragment"
        android:label="@string/title_allenamenti"
        tools:layout="@layout/fragment_allenamenti" >
        <action
            android:id="@+id/action_navigation_allenamenti_to_navigation_esercizi1"
            app:destination="@id/navigation_esercizi1" />
        <action
            android:id="@+id/action_navigation_allenamenti_to_navigation_esercizi2"
            app:destination="@id/navigation_esercizi2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.gymapp2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.gymapp2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_esercizi1"
        android:name="com.example.gymapp2.ui.esercizi1.Esercizi1Fragment"
        android:label="@string/title_esercizi1"
        tools:layout="@layout/fragment_esercizi1">
        <action
            android:id="@+id/action_navigation_esercizi1_to_navigation_allenamenti"
            app:destination="@id/navigation_allenamenti" />
    </fragment>

    <fragment
        android:id="@+id/navigation_esercizi2"
        android:name="com.example.gymapp2.ui.esercizi2.Esercizi2Fragment"
        android:label="@string/title_esercizi2"
        tools:layout="@layout/fragment_esercizi2">
        <action
            android:id="@+id/action_navigation_esercizi2_to_navigation_allenamenti"
            app:destination="@id/navigation_allenamenti" />
        <action
            android:id="@+id/action_navigation_esercizi2_to_navigation_tutorial"
            app:destination="@id/navigation_tutorial" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tutorial"
        android:name="com.example.gymapp2.ui.tutorial.TutorialFragment"
        android:label="@string/title_tutorial"
        tools:layout="@layout/fragment_tutorial">
        <action
            android:id="@+id/action_navigation_tutorial_to_navigation_esercizi2"
            app:destination="@id/navigation_esercizi2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orari"
        android:name="com.example.gymapp2.ui.orari.OrariFragment"
        android:label="@string/title_orari"
        tools:layout="@layout/fragment_orari">
        <action
            android:id="@+id/action_navigation_orari_to_navigation_home"
            app:destination="@id/navigation_home"/>
    </fragment>

</navigation>